--- a/projects/ext/ngx-perfect-scrollbar/src/lib/extended/perfect-scrollbar.component.scss
+++ b/projects/ext/ngx-perfect-scrollbar/src/lib/extended/perfect-scrollbar.component.scss
@@ -1,3 +1,3 @@
 // Import styles with default layout.
-@import 'perfect-scrollbar/css/perfect-scrollbar.css';
+@import '../../../../../../node_modules/perfect-scrollbar/css/perfect-scrollbar.css';
 
