--- a/projects/ext/ng-dynamic-forms-ui-ngx-bootstrap/src/lib/extended/select/dynamic-ngx-bootstrap-select.component.html
+++ b/projects/ext/ng-dynamic-forms-ui-ngx-bootstrap/src/lib/extended/select/dynamic-ngx-bootstrap-select.component.html
@@ -27,7 +27,8 @@
     *ngIf="$any(model.additional)?.use_ng_select === true"
     bindValue="value"
     bindLabel="label"
-    [clearable]="$any(model.additional)?.use_ng_select_clearable === true"
+    [clearable]="$any(model.additional)?.use_ng_select__clearable === true"
+    [multiple]="$any(model.additional)?.use_ng_select__multiple === true"
     class="form-control ng-dynamic-forms-ngx-bootstrap-select-ng-select"
     [class.is-invalid]="showErrorMessages"
     [compareWith]="model.compareWithFn"
